src/cli/snapshots/cairn__cli__tests__init_from_code_ignore_human.snap
---
source: src/cli/mod.rs
expression: human.stdout
---
brownfield init complete; change written to meta/changes/brownfield-init/

Suggested initial ignores (written only with `--apply`):
  - "node_modules"
  - "packages/api/dist"
  - "packages/web/dist"


Next steps (review before you apply):
  1. Review `meta/changes/brownfield-init/proposal.md` and correct the grouping, paths, edges, and contracts
  2. Apply the reviewed change: `cairn change apply brownfield-init`. On a fresh run, `cairn init --from-code --apply` writes the suggested ignore entries first. If you review this proposal first, add one line per suggested path to `cairn.config.yaml`, then run this apply command
  3. Wire cairn into your agent: `cairn init --wire`
  4. Reconcile the blueprint against your code: `cairn scan`
  5. Group any files still unowned: `cairn onboard`
  6. Check the commit gate: `cairn hook all`
