src/cli/snapshots/cairn__cli__tests__lint_node_clean_map.snap
---
source: src/cli/mod.rs
expression: clean_result.stdout
---
Findings:
Blueprint reconciled cleanly. No findings.
