src/cli/snapshots/cairn__cli__tests__lint_node_no_blueprint.snap
---
source: src/cli/mod.rs
expression: no_bp.stdout
---
No cairn.blueprint found. Inspection has nothing to look at.
Run `cairn init` to scaffold a blueprint, then re-run `cairn lint`.
